--- a/MobyLabWebProgramming.Backend/appsettings.json
+++ b/MobyLabWebProgramming.Backend/appsettings.json
@@ -11,18 +11,18 @@
     "Issuer": "https://my.app",
     "Audience": "https://my.app"
   },
-  "ConnectionStrings": { // here ussually all database connection strings are set.
+  "ConnectionStrings": {
     "WebAppDatabase": "Server=localhost;Port=5432;Database=mobylab-app;User Id=mobylab-app;Password=mobylab-app;"
   },
   "FileStorageConfiguration": {
-    "SavePath": "../TempDocuments" // this path is where the file service saves the files on the filsesytem
+    "SavePath": "../TempDocuments"
   },
-  "MailConfiguration": { // this configures the mail service
-    "MailEnable": false, // set to true for testig
-    "MailHost": "sandbox.smtp.mailtrap.io", // this is the host for mail trap, you can setup an account on https://mailtrap.io/ and use it to test mails
+  "MailConfiguration": {
+    "MailEnable": true,
+    "MailHost": "sandbox.smtp.mailtrap.io",
     "MailPort": 2525,
     "MailAddress": "test@my.app",
-    "MailUser": "", // use your own mailtrap user
-    "MailPassword": "" // use your own mailtrap password
+    "MailUser": "3ba3e4491c5fdf",
+    "MailPassword": "6ec2027623ba73"
   }
 }
